[actions] Add deployment token

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,4 +39,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v2.5.0
         with:
          build_dir: docs
+        env:
+         GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
 
